@@ -69,7 +69,10 @@
 								<type>popup</type>
 								<title>Link</title>
 								<icon>link_popup.gif</icon>
-								<script>browse_links.php?mode=file</script>
+								<script>browse_links.php?mode=wizard&amp;act=file</script>
+								<params type="array">
+									<blindLinkOptions>page,url,mail,spec</blindLinkOptions>
+								</params>
 								<JSopenParams>height=300,width=500,status=0,menubar=0,scrollbars=1</JSopenParams>
 							</link>
 						</wizards>
